--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,32 @@
+# Python
+*.pyc
+*~
+__pycache__
+
+# Env
+.env
 myvenv/
 venv/
-__pycache__/
-*.pyc
+
+# Database
 db.sqlite3
-.env
-*.log
+
+# Static folder at project root
 /static/
+
+# macOS
+._*
 .DS_Store
-Thumbs.db
+.fseventsd
+.Spotlight-V100
+
+# Windows
+Thumbs.db*
+ehthumbs*.db
+[Dd]esktop.ini
+$RECYCLE.BIN/
+
+# Visual Studio
+.vscode/
+.history/
+*.code-workspace
